--- a/index.html
+++ b/index.html
@@ -5,98 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAPPIERT 해피어트</title>
-    <style>
-        /* header */
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        .coupon {
-            background-color: #be201f;
-            color: #fff;
-            text-align: center;
-            padding: 12px;
-            font-size: 14px;
-        }
-
-        .top_container {
-            background: url(./img/메인컨테이너.png);
-            height: 600px;
-            background-size: cover;
-            margin: 0;
-            padding: 16px 48px;
-        }
-
-        .header_container,
-        .header_ul {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            color: #be201f;
-        }
-
-        h1,
-        .header_icon_box,
-        .header_ul {
-            display: flex;
-        }
-
-        .header_ul {
-            width: 500px;
-            justify-content: flex-start;
-        }
-
-        li {
-            font-weight: 600;
-            margin: 0 12px;
-            list-style: none;
-            font-size: 20px;
-        }
-
-        h1 {
-            width: 500px;
-            justify-content: center;
-        }
-
-        .header_icon_box {
-            width: 500px;
-            justify-content: flex-end;
-        }
-
-        .header_icon_box>svg {
-            width: 30px;
-            height: 30px;
-            margin: 0 12px;
-            fill: #be201f;
-        }
-
-        .header_icon_box>svg>path {
-            fill: #be201f;
-        }
-
-        .header_main {
-            color: #fff;
-            margin: 12px;
-        }
-
-        .header_main > h2 {
-            font-size: 36px;
-        }
-
-        .header_main > p {
-            margin-top: 24px;
-        }
-
-        /* main */
-        .goods_container > figure {
-            background: url(./img/goods.jpg);
-            width: 437px;
-            height: 535px;
-            background-size: cover;
-            background-position: center;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -146,12 +55,65 @@
             <div class="goods1">
                 <figure></figure>
                 <p>해피어트 마이크로바이옴 쉐이크 곡물맛 3주 플랜(1통)</p>
-                <span>230,000</span>
-                <span>295,000</span>
-                <p>22% off</p>
+                <span>55,000</span>
+                <span>59,000</span>
+                <p>7% off</p>
+            </div>
+            <div class="goods1">
+                <figure></figure>
+                <p>해피어트 마이크로바이옴 쉐이크 곡물맛 3주 플랜(1통)</p>
+                <span>55,000</span>
+                <span>59,000</span>
+                <p>7% off</p>
+            </div>
+            <div class="goods1">
+                <figure></figure>
+                <p>해피어트 마이크로바이옴 쉐이크 곡물맛 3주 플랜(1통)</p>
+                <span>55,000</span>
+                <span>59,000</span>
+                <p>7% off</p>
+            </div>
+        </section>
+        <section class="slide_text_container">
+            <h2>
+                Easier than ever Make it Happier
+            </h2>
+        </section>
+        <section class="gradient_container">
+            <figure></figure>
+            <figure></figure>
+            <div class="gradient_text">
+                <div class="gradient_text_top">
+                    <h2>다이어트 테크닉</h2>
+                    <p>
+                        미생물을 활용한 해피어트만의 독보적인 다이어트
+                        <br>
+                        테크닉을 지금 바로 만나보세요
+                    </p>
+                </div>
+                <button>view more</button>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="info">
+            <p>상호: 조이라이프 코리아 | 대표: 임선종</p>
+            <p>사업자등록번호 | 통신판매업신고번호</p>
+            <p>주소: 충북 청주시 흥덕구 공단로 134 108호 | 개인정보보호책임자: 인선종</p>
+        </div>
+        <div class="guide">
+            <p>이용약관</p>
+            <p>개인정보처리방침</p>
+            <p>자주묻는질문</p>
+        </div>
+        <div class="contact">
+            <h2>플러스친구 @해피어트</h2>
+            <p>* 유선 상담은 진행하지 않습니다</p>
+            <br>
+            <p>평일 10:00~17:00 (점심 12:00 ~ 13:00)</p>
+            <p>주말 및 공휴일 휴무</p>
+        </div>
+    </footer>
 </body>
 
 </html>
