--- a/index.html
+++ b/index.html
@@ -97,17 +97,20 @@
     </main>
     <footer>
         <div class="info">
+            <h2>Info</h2>
             <p>상호: 조이라이프 코리아 | 대표: 임선종</p>
             <p>사업자등록번호 | 통신판매업신고번호</p>
             <p>주소: 충북 청주시 흥덕구 공단로 134 108호 | 개인정보보호책임자: 인선종</p>
         </div>
         <div class="guide">
+            <h2>Guide</h2>
             <p>이용약관</p>
             <p>개인정보처리방침</p>
             <p>자주묻는질문</p>
         </div>
         <div class="contact">
-            <h2>플러스친구 @해피어트</h2>
+            <h2>Contact us</h2>
+            <h3>플러스친구 @해피어트</h3>
             <p>* 유선 상담은 진행하지 않습니다</p>
             <br>
             <p>평일 10:00~17:00 (점심 12:00 ~ 13:00)</p>
